add api driver info

--- a/src/EDCL.WebAPI/appsettings.json
+++ b/src/EDCL.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "DatabaseSettings": {
+    "DefaultConnection": "Server=ali-djafar;Database=AE031_EDCL_DB;User Id=sa;Password=fid123!!;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
