Fix API GetDriverInfo

--- a/src/EDCL.WebAPI/Properties/launchSettings.json
+++ b/src/EDCL.WebAPI/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "http://10.65.133.99:4000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,7 +24,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47329",
+      "applicationUrl": "http://10.65.133.99:47329",
       "sslPort": 0
     }
   }
