--- a/src/EDCL.WebAPI/appsettings.json
+++ b/src/EDCL.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "DefaultConnection": "Server=ali-djafar;Database=AE031_EDCL_DB;User Id=sa;Password=fid123!!;TrustServerCertificate=True"
+    "DefaultConnection": "Server=127.0.0.1,4107;Database=AE031_DB;User Id=sa;Password=sqlserver-docker;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
